# Delivery-Microservice

delivery/: pyproject.toml
delivery/app/: __init__.py  config.py  dto.py  main.py  message.py  models.py
